--- a/package.json
+++ b/package.json
@@ -8,25 +8,31 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@mui/styled-engine": "^5.14.14",
+    "@mui/x-data-grid": "^6.16.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.10.1",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "clsx": "^2.0.0",
+    "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
     "router": "^1.3.8",
+    "sass": "^1.69.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject" 
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
