--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "clsx": "^2.0.0",
+    "jwt-decode": "^4.0.0",
     "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
