--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.21",
     "@mui/icons-material": "^5.14.14",
+    "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.14",
     "@mui/styled-engine": "^5.14.14",
     "@mui/x-data-grid": "^6.16.2",
