--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "router": "^1.3.8",
