--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
+    "recharts": "^2.10.3",
     "router": "^1.3.8",
     "sass": "^1.69.4",
     "slick-carousel": "^1.8.1",
