--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.14",
     "@mui/styled-engine": "^5.14.14",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-data-grid": "^6.16.2",
     "@mui/x-date-pickers": "^6.18.2",
     "@testing-library/jest-dom": "^5.17.0",
